infrastructure/observability/base/karma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: karma.crulabs.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karma
                port:
                  number: 80
  tls:
    - hosts:
        - karma.crulabs.internal
      secretName: ca-crulabs
